--- a/ecommfront/src/index.css
+++ b/ecommfront/src/index.css
@@ -5,6 +5,41 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+}
+
+
+#root{
+  display: flex;
   background-color: #F0EAD2;
 }
 
+.PlantRow{
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+.PlantCol{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.PlantPrevCard{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px; 
+  padding: 5px; 
+}
+
+.PlantPrevBody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
